--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
         <head>
                 <title>MARTIAL ARTS</title>
                 <body>
-                        <link rel="stylesheet" type="text/css" href="martial.css">
+                        <link rel="stylesheet" type="text/css" href="main.css">
                         <link rel="stylesheet" type="text/css" href="bootstrap.css">
-                        <script src="martial.js" defer></script>
+                        <script src="main.js" defer></script>
                         <h1 align="center">MARTIAL ARTS SIMULATION</h1>
                         <body class="b">
                                 <canvas align ="center" id="canvas" height="500" , width="500"></canvas>
